--- a/tests/test.html
+++ b/tests/test.html
@@ -17,10 +17,10 @@
                 return doc;
             }
 
-            console.log(createLinks([
+            createLinks([
                 'http://www.google.com',
                 'http://www.google.com#hash'
-            ]));
+            ]);
 
             test("a basic test example", function() {
                 ok( true, "this test is fine" );
