--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Adf.ly script</title>
+    <meta name="description" content="Link changer for displaying adf.ly ads" />
     <script type="text/javascript" src="adfly.js" ></script>
     <style type="text/css">
         body{
