clarify init placement

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <p>Include js:</p>
         <code>&lt;script type="text/javascript" src="adfly.js" &gt;&lt;/script&gt;</code>
         
-        <p>Init script:</p>
+        <p>Init script (at the bottom of the page, preferably just before the &lt;/body&gt;): </p>
         <code>Adfly('your_adfly_id', {options});</code>
                 
         <h2>Example</h2>
